# osa-py

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: pdb_convention.py  test_example.py
examples/pockets/: pyproject.toml
examples/pockets/pockets/: __init__.py  convention.py
examples/pockets/tests/: test_convention.py
osa/: __init__.py  _registry.py  manifest.py
osa/authoring/: __init__.py  convention.py  example.py  hook.py  ingester.py
osa/cli/: _ingestion_commands.py  _runtime_commands.py  deploy.py  ingestion.py  instance.py  link.py  login.py  logout.py  main.py  proc.py
osa/cli/templates/: docker-compose.yml
osa/cli/ui/: __init__.py  _glyphs.py  _model.py  _renderer.py  _rich.py
osa/runtime/: entrypoint.py  ingester_context.py  ingester_entrypoint.py  logging.py
osa/testing/: __init__.py  harness.py  runner.py
osa/types/: __init__.py  ingester.py  schema.py
tests/: test_cli.py  test_convention.py  test_convention_v2.py  test_deploy.py  test_deploy_v2.py  test_docs_gate.py  test_entrypoint_new.py  test_harness.py  test_hook_decorator.py  test_ingester_entrypoint.py  test_ingester_types.py  test_ingestion.py  test_instance.py  test_link.py  test_login.py  test_logout.py  test_new_manifest.py  test_proc.py  test_record.py  test_runner.py  test_schema.py  test_to_field_definitions.py  test_ui.py
